// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mixMenu component renders correctly 1`] = `
<ContextMenu
  animation={null}
  id="test"
  theme={null}
>
  <Item
    data={null}
    disabled={false}
    leftIcon=""
    onClick={[Function]}
    refsFromProvider={Array []}
    rightIcon=""
    targetNode={Object {}}
  >
    Add Mix
  </Item>
  <Item
    data={null}
    disabled={false}
    leftIcon=""
    onClick={[Function]}
    refsFromProvider={Array []}
    rightIcon=""
    targetNode={Object {}}
  >
    Delete Mix
  </Item>
</ContextMenu>
`;

exports[`mixMenu component when the isMixHeader prop is false renders correctly 1`] = `
<ContextMenu
  animation={null}
  id="value_menu_id"
  theme={null}
>
  <Item
    data={null}
    disabled={false}
    leftIcon=""
    onClick={[Function]}
    refsFromProvider={Array []}
    rightIcon=""
    targetNode={Object {}}
  >
    Add Mix
  </Item>
  <Item
    data={null}
    disabled={true}
    leftIcon=""
    onClick={[Function]}
    refsFromProvider={Array []}
    rightIcon=""
    targetNode={Object {}}
  >
    Delete Mix
  </Item>
</ContextMenu>
`;
